--- a/index.html
+++ b/index.html
@@ -68,41 +68,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td class="user">
-            <img src="http://github.com/moaramiranda.png" alt="user image">
-            <a href="http://github.com/moaramiranda" target="_blank">
-              <p>Moara Miranda</p>
-              <span>/moaramiranda</span>
-            </a>
-          </td>
-          <td class="repositories">
-            20
-          </td>
-          <td class="followers">6</td>
-          <td class="action">
-            <button class="remove">Remove</button>
-          </td>
-        </tr>
-
-        <tr>
-          <td class="user">
-            <img src="http://github.com/hernanif1.png" alt="user image">
-            <a href="http://github.com/hernanif1" target="_blank">
-              <p>Hernani Fernandes</p>
-              <span>/hernanif1</span>
-            </a>
-          </td>
-          <td class="repositories">
-            30
-          </td>
-          <td class="followers">15</td>
-          <td class="action">
-            <button class="remove">Remove</button>
-          </td>
-        </tr>
       </tbody>
     </table>
+    <div id="empty-favorites" class="no-favorites">
+      <img src="./assets/Estrela.svg" alt="start">
+      <span> No favorites yet</span>
+    </div>
   </div>
 
 </body>
